--- a/Kuliah/pertemuan11/style.css
+++ b/Kuliah/pertemuan11/style.css
@@ -4,6 +4,7 @@ body {
   font-family: sans-serif;
 }
 
+
 * {
   box-sizing: border-box;
 }
@@ -27,4 +28,33 @@ body {
 
 .produk tbody tr:nth-child(even) {
   background-color: #f5f5f5;
+}
+
+.container {
+  margin-top: 100px;
+  border: 2px solid coral;
+  box-shadow: 5px 5px 5px coral;
+}
+
+.row {
+  margin-top: 100px;
+  border: 2px solid coral;
+  box-shadow: 5px 5px 5px coral; 
+}
+
+.arrival {
+  background: coral;
+  width: 50px;
+  color: white;
+  font-size: 12px;
+  font-weight: bold;
+}
+
+.keterangan {
+  margin-top: 20px;
+  margin-left: 5px;
+}
+
+.keterangan h2 {
+  color: #555;
 }
